# secedo

./: .gitignore  02_compute_simMat.py  02_similarity_matrix.py  03_compute_specClus.py  04_EM_stepA.py  CMakeLists.txt  README.md  bam_reader.hpp  environment.yml  expectation_maximization.cpp  expectation_maximization.hpp  expectation_maximization_main.cpp  flags_breast  flags_sim  logger.cpp  mat.hpp  pileup.cpp  pileup.hpp  pileup_main.cpp  pileup_reader.cpp  pileup_reader.hpp  preprocess.hpp  preprocess_main.cpp  secedo_main.cpp  sequenced_data.hpp  silver_main.cpp  similarity_matrix.cpp  similarity_matrix.hpp  similarity_matrix_main.cpp  spectral_clustering.cpp  spectral_clustering.hpp  spectral_clustering.ipynb  svc_main.cpp  util.cpp  util.hpp  variant_calling.cpp  variant_calling.hpp
.github/workflows/: cmake.yml
00_filtering/varsim_data/: 1_run_filtering.sh
01_mpileup_preprocessing/: preprocessing.py  run_mpileup.sh
experiments/: README.md
experiments/breast_cancer/: breast_group_2  breast_group_ABCDE_1  breast_group_ABCDE_2  breast_group_B_1  breast_group_B_3  breast_group_B_4  mutect.sh  variant_call.sh
experiments/breast_cancer/preprocessing/: 1_run_filtering.sh  2_run_filteringCB.sh  3_run_splittingByCB.sh  split_by_CBtag.py
experiments/gastric/: 1_run_filtering.sh  2_run_filteringCB.sh  3_run_splittingByCB.sh  variant_call.sh
experiments/melanoma/: 1_run_filtering.sh  2_run_filteringCB.sh  3_run_splittingByCB.sh  split_by_CBtag.py  variant_call.sh
experiments/tupro/: split.sh  variant_call.sh
experiments/varsim/: README  README.md  compare_vcf.py  cov_vs_snp.sh  create_genomes.sh  generate_reads.py  intersect_vcf.py  main.sh  old_run_remove_commas_from_readnames.sh  variant_call.sh
other/: create_new_pileup.py  split_mpileup_file.py
python_old/: 03_spectral_clustering.py  05_EM_stepB.py  06_varCalling.py  README.md
python_old/00_filtering/10x_breast/: 3_run_splittingByCB.sh
python_old/00_filtering/10x_skin/: split_by_CBtag.py
python_old/00_filtering/varsim_data/: 2_run_sorting.sh  3_run_removeCommasFromReadNames.sh
python_old/01_mpileup_preprocessing/: preprocessing.py
python_old/other/: varCalling_performance.py
scripts/: Gastric Cell LIne.ipynb  K.r  Paper charts.ipynb  SBMClone.ipynb  SBMCloneVsSecdo.ipynb  SecedoAnalyze.ipynb  explore_similarity_scores.ipynb  gen-cosmic-chunks.py  melanoma.ipynb  sort_vcf.py  spectral_clustering.ipynb  utils.ipynb
tests/: test_expectation_maximization.cpp  test_is_significant.cpp  test_kmeans.cpp  test_pileup.cpp  test_pileup_reader.cpp  test_preprocess.cpp  test_spectral_clustering.cpp  test_util.cpp  test_variant_calling.cpp
tests/data/: cosmic_small.vcf  genome_diploid_female.fa  genome_diploid_male.fa  genome_diploid_male.map  genome_female.fa  kmeans.csv  one_row.pileup  six_cells.pileup  six_cells.pileup.group  ten_rows.pileup  test.map  test1.bam  test1.bam.bai  test1.sam  test2.bam  test2.bam.bai  test2.sam  test3.bam  test3.bam.bai  test3.sam  three_rows.pileup
util/: bam_reader.cpp  bam_reader.hpp  heap.hpp  is_significant.cpp  is_significant.hpp  kmeans.cpp  kmeans.hpp  logger.cpp  pileup_reader.cpp  pileup_reader.hpp  util.cpp  util.hpp
varsim_simulation/: 1_run_generate_cell_pattern.sh  1_run_simulate_healthy.sh  2_generate_reads.py  2_run_generate_reads.sh  2_run_simulate_tumor.sh  3_run_mapping.sh  4_run_pileup.sh  5_run_split.sh  5_run_variant_calling.sh  6_run_pileup.sh  7_run_variant_calling.sh  create_cosmic.sh  generate_reads.py  germline_sim.sh  global_vars.sh  main.sh  old_run_split.sh  run_generate_reads.sh  run_mapping_germ.sh  run_mapping_som.sh  somatic_sim.sh  split.sh
